tests/typecheck/should_fail/ExplicitSpecificity6.stderr
ExplicitSpecificity6.hs:8:1: error: [GHC-54832]
    • Inferred type variables are not allowed
    • In the instance declaration for ‘C (Either a b)’

ExplicitSpecificity6.hs:9:3: error: [GHC-54832]
    • Inferred type variables are not allowed
    • In a SPECIALISE instance pragma

